--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -3,11 +3,11 @@
 ## Overview 
 Up until this point, we have solved all of our predictive problems---both classification
 and regression---using K-nearest neighbours-based approaches. But while K-NN methods are 
-simple and flexible, in the context of regression there is another method (far more popular in
+simple and flexible, in the context of regression there is another method (generally more popular in
 most scientific disciplines) known as *linear regression*. This chapter provides an introduction
-to the concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
+to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
 and characterizes its strengths and weaknesses in comparison to K-NN regression. The focus is, as usual,
-on the case where there is a single predictor and single response variable of interest, but the chapter
+on the case where there is a single predictor and single response variable of interest; but the chapter
 concludes with an example of how to use *multivariate linear regression* when there is more than one
 predictor.
 
@@ -19,27 +19,39 @@ By the end of the chapter, students will be able to:
 * In R, overlay regression lines from `geom_smooth` on a single plot. 
 
 ## Simple linear regression
-K-NN is not the only type of regression; another 
-quite useful, and arguably the most common, type of regression is 
-called simple linear regression. Simple
-linear regression is similar to K-NN regression in that the target/response
-variable is quantitative. However, one way it varies quite
-differently is how the training data is used to predict a value for a new
-observation. Instead of looking at the $K$-nearest neighbours and averaging
+
+At the end of the previous chapter, we noted some limitations of K-NN regression.
+While the method is simple and easy to understand, K-NN regression does not
+predict well beyond the range of the predictors in the training data, and
+the method gets significantly slower as the training dataset grows.
+Fortunately, there is an alternative to K-NN regression---*linear regression*---that addresses
+both of these limitations. Linear regression is also much more commonly used in practice, especially
+in scientific applications. In this first part of the chapter, we will focus on *simple* linear regression,
+which involves only one predictor variable and one response variable; later on we will consider
+*multivariate* linear regression, which involves multiple predictor variables.
+Like K-NN regression, simple linear regression involves
+predicting a numerical response variable (like race time, house price, or height);
+but *how* it makes those predictions for a new observation is quite different from K-NN regression.
+ Instead of looking at the K nearest neighbours and averaging
 over their values for a prediction, in simple linear regression all the
 training data points are used to create a straight line of best fit, and then
-the line is used to "look up" the predicted value. 
+the line is used to "look up" the prediction. 
 
-> Note: for simple linear
-regression there is only one response variable and only one predictor. Later in
-this chapter we introduce the more general linear regression case where more
-than one predictor can be used.
+> **Note:** although we did not cover it explicitly in the classification chapters,
+> there is another popular method for classification called *logistic regression* (ignore 
+> the word *regression* there...). After reading this chapter, if you want something like
+> linear regression but for classification, consider looking up logistic regression; 
+> logistic regression and K-NN classification have a very similar advantage/disadvantage comparison
+> as linear regression and K-NN regression. See the "Additional Resources" section at the end of
+> the classification chapters to learn more about logistic regression.
 
-For example, let's revisit the smaller version of the Sacramento housing data
-set. Recall that we have come across a new 2,000-square foot house we are interested
+Let's return to the Sacramento housing data from the previous chapter to see how
+to apply linear regression and how it compares to K-NN regression. For now, we will consider 
+a smaller version of the housing data to help make our visualizations clear.
+Recall our predictive question: can we use the size of a house in the Sacramento, CA area to predict
+its sale price? In particular, recall that we have come across a new 2,000-square foot house we are interested
 in purchasing with an advertised list price of
 \$350,000. Should we offer the list price, or is that over/undervalued?
-
 To answer this question using simple linear regression, we use the data we have
 to draw the straight line of best fit through our existing data points:
 
@@ -102,7 +114,7 @@ small_plot +
 ```
 
 Simple linear regression chooses the straight line of best fit by choosing
-the line that minimzes the **average** vertical distance between itself and
+the line that minimizes the **average** vertical distance between itself and
 each of the observed data points. From the lines shown above, that is the blue
 line. What exactly do we mean by the vertical distance between the predicted
 values (which fall along the line of best fit) and the observed data points?
