updated intro paragraph, added overview image

--- a/index.Rmd
+++ b/index.Rmd
@@ -41,11 +41,15 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 ```
 
 # R and the tidyverse
-This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. 
 
-The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help getting started using R on their computer, we recommend starting with [Moving to your own machine].
+This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help getting started using R on their computer, we recommend starting with the [Moving to your own machine] chapter. Figure \@ref(fig:img-chapter-overview) provides an overview of what you will learn in each chapter of this book.
 
-Four common problems in data science, which are useful for answering predictive and inferential data analysis questions are:
+```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="850", fig.retina = 2}
+knitr::include_graphics("img/chapter_overview.jpeg")
+```
+
+
+Four common data science problems that are useful for answering predictive and inferential data analysis questions covered in this book are:
 
 1. Predicting a class/category for a new observation/measurement (e.g., cancerous or benign tumour)
 2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20-year-old females with a BMI of 25).
