reading chapter web scraping done, WIP on API

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -517,8 +517,8 @@ from a URL. Instead, websites now often offer something known as an **a**pplicat
 **p**rogramming **i**nterface (API), which provides a programmatic way to ask
 for subsets of a dataset. This allows the website owner to control *who* has access
 to the data, *what portion* of the data they have access to, and *how much* data they can access.
-Typically, in order to use the API, you have to provide the website owner with a *token*: a 
-secret string of characters that is somewhat like a password.
+Typically, the website owner will give you a *token* (a secret string
+of characters somewhat like a password) that you have to provide when accessing the API.
 
 Another interesting thought: websites themselves *are* data! When you type a URL
 into your browser window, your browser asks the web server to give it some data, 
@@ -543,9 +543,7 @@ When you enter a URL into your browser, your browser connects to the
 web server at that URL and asks for the *source code* for the website.
 This is the data that the browser translates into something you can see; so if we
 are going to create our own data by scraping a website, we have to first understand
-what that data looks like!
-
-For example, let's say we are interested
+what that data looks like! For example, let's say we are interested
 in knowing the average rental price (per square foot) of the most recently
 available one-bedroom apartments in Vancouver from
 https://vancouver.craigslist.org. When we visit the Vancouver Craigslist
@@ -675,8 +673,8 @@ source: https://www.craigslist.org/about/terms.of.use
 > Legal, Right?" by Benoit
 > Bernard](https://benbernardblog.com/web-scraping-and-crawling-are-perfectly-legal-right/).
 
-So what to do now? Well, we *could* ask the owner of Craigslist for permission to scrape
-(although we are not likely to get a response, and even if we did they would not likely give us permission).
+So what to do now? Well, we *could* ask the owner of Craigslist for permission to scrape.
+However, we are not likely to get a response, and even if we did they would not likely give us permission.
 The more realistic answer is that we simply cannot scrape Craigslist. If we still want
 to find data about rental prices in Vancouver, we must go elsewhere.
 
@@ -710,8 +708,10 @@ Next, we tell R what page we want to scrape by providing the webpage's URL in qu
 page <- read_html("https://en.wikipedia.org/wiki/Canada")
 ```
 
-The `read_html` function just directly downloads the source code for the page at the URL you specify---just like your browser 
-would. But instead of displaying the website to you, the `read_html` function just returns the code itself, which we have
+The `read_html` function directly downloads the source code for the page at 
+the URL you specify, just like your browser would if you navigated to that site. But 
+instead of  displaying the website to you, the `read_html` function just returns 
+the HTML source code itself, which we have
 stored in the `page` variable. Next, we send the page object to the `html_nodes`
 function, along with the CSS selectors we obtained from
 the SelectorGadget tool. Make sure to surround the selectors with quotations; `html_nodes` expects that
@@ -755,5 +755,22 @@ into a more useful format for data analysis using R.
 
 (TODO)
 
+**STOP! Think about your API usage carefully!**
+
+When you access an API, you are initiating a transfer of data from a web server
+to your computer. Web servers are expensive to run and do not have infinite resources.
+If you try to ask for *too much data* at once, you can use up a huge amount of the server's bandwidth. 
+If you try to ask for data *too frequently*---e.g.
+if you make many requests to the server in quick succession---you can also bog the server down and make
+it unable to talk to anyone else. Most servers have mechanisms to revoke your access if you are not
+careful, but you should try to prevent issues from happening in the first place by being extra careful
+with how you write and run your code. You should also keep in mind that when a website owner
+grants you API access, they also usually specify a limit (or *quota*) of how much data you can ask for.
+Be careful not to overrun your quota!
+
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
+
+
+
+
