adding twitter example

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -753,20 +753,42 @@ into a more useful format for data analysis using R.
 
 ### Using an API
 
-(TODO)
+Rather than posting raw data at a URL for you to download, many data-focused websites these days
+provide an API that must be accessed through a programming language like R. The benefit of this
+is that data owners have much more control over the data they provide to users. However, unlike
+web scraping, there is no consistent way to access an API across websites. Every website typically
+has its own API designed specially for its own use-case. Therefore we will just provide one example
+of accessing data through an API in this book, with the hope that it gives you enough of a basic
+idea that you can learn how to use another API if needed.
+
+In particular, in this book we will show you how to use an API that obtains data 
+from [Twitter](www.twitter.com). One nice feature of this particular API is that you don't need 
+a special *token* to access it; you simply need to 
+make an account with them. Your access to the data will then be authenticated and controlled through
+your account username and password. If you have a Twitter account already (or are willing to make one), you can follow
+along with the examples that we show here safely. But before we go on...
 
 **STOP! Think about your API usage carefully!**
 
 When you access an API, you are initiating a transfer of data from a web server
 to your computer. Web servers are expensive to run and do not have infinite resources.
 If you try to ask for *too much data* at once, you can use up a huge amount of the server's bandwidth. 
-If you try to ask for data *too frequently*---e.g.
-if you make many requests to the server in quick succession---you can also bog the server down and make
+If you try to ask for data *too frequently*---e.g. if you 
+make many requests to the server in quick succession---you can also bog the server down and make
 it unable to talk to anyone else. Most servers have mechanisms to revoke your access if you are not
 careful, but you should try to prevent issues from happening in the first place by being extra careful
 with how you write and run your code. You should also keep in mind that when a website owner
 grants you API access, they also usually specify a limit (or *quota*) of how much data you can ask for.
 Be careful not to overrun your quota!
+
+OK, back to the Twitter example. [ROpenSci](https://ropensci.org/) has created an API
+called [rtweet](https://github.com/ropensci/rtweet) that lets you access data from Twitter using R.
+We first load the `rtweet` package,
+```
+library(rtweet)
+```
+
+(TODO)
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
