twitter API WIP

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -779,16 +779,42 @@ it unable to talk to anyone else. Most servers have mechanisms to revoke your ac
 careful, but you should try to prevent issues from happening in the first place by being extra careful
 with how you write and run your code. You should also keep in mind that when a website owner
 grants you API access, they also usually specify a limit (or *quota*) of how much data you can ask for.
-Be careful not to overrun your quota!
+Be careful not to overrun your quota! 
 
 OK, back to the Twitter example. [ROpenSci](https://ropensci.org/) has created an API
 called [rtweet](https://github.com/ropensci/rtweet) that lets you access data from Twitter using R.
+Before getting started, make sure you review the access quotas that can be 
+found [on the Twitter website](https://developer.twitter.com/en/docs/twitter-api/rate-limits).
 We first load the `rtweet` package,
 ```
 library(rtweet)
 ```
 
+The first time you call a function a web page will pop up asking for your username and password.
+`rtweet` requires quite extensive access to your account, so make sure you are comfortable with
+that level of access before signing on.
+
 (TODO)
+
+```r
+tmls <- get_timelines(c("cnn", "BBCWorld", "foxnews"), n = 3200)
+```
+
+```r
+cnn_fds <- get_friends("cnn")
+```
+
+```r
+usrs <- search_users("#rstats", n = 1000)
+```
+
+```r
+rt <- search_tweets("#rstats", n = 10000, include_rts = FALSE)
+```
+
+```r
+rt <- stream_tweets("", timeout = 60)
+```
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
