--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -38,9 +38,10 @@ By the end of the chapter, students will be able to:
 - retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` package
 - use `write_csv` to save a data frame to a `.csv` file
 
-- (*optional*) scrape data from the web
-    - read/scrape data from an internet URL using the rvest `html_nodes` and `html_text` functions
-    - compare downloading tabular data from a plain text file (e.g. `.csv`) from the web versus scraping data from a `.html` file
+- (*optional*) obtain data using APIs and web scraping
+    - read HTML source code from a URL using the `rvest` package
+    - read data from Twitter using the `rtweet` package
+    - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code a website
 
 ## Absolute and relative file paths
 
