polished additional resources for wrangling

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -543,8 +543,9 @@ The `map_*` functions are generally quite useful for solving problems involving 
 of a data frame; `map_*` functions can be used to apply functions to elements of a vector or list, and even to lists of data frames, or nested data frames.
 
 ## Additional resources
-Grolemund & Wickham's [R for Data Science](https://r4ds.had.co.nz/) has a number of useful sections that provide additional information:
-
-- [Data transformation](https://r4ds.had.co.nz/transform.html)
-- [Tidy data](https://r4ds.had.co.nz/tidy-data.html)
-- [The `map_*` functions](https://r4ds.had.co.nz/iteration.html#the-map-functions)
+- The [tidyverse website](https://tidyverse.org) has [a page on `dplyr`](https://dplyr.tidyverse.org/) that contains a very nice cheat sheet that summarizes a lot of the data wrangling functions from this chapter.
+- [R for Data Science](https://r4ds.had.co.nz/) has a few chapters related to data wrangling that go into more depth than this book does:
+    - the [tidy data](https://r4ds.had.co.nz/tidy-data.html) chapter covers the concept of tidy data, missing values, `pivot_longer`/`pivot_wider`, and additional wrangling functions (like `unite` and `separate`)
+    - the [data transformation](https://r4ds.had.co.nz/transform.html) chapter covers `select`, `filter`, `arrange`, `mutate`, and `summarize` 
+    - the [`map_*` functions](https://r4ds.had.co.nz/iteration.html#the-map-functions) chapter covers the `map_*` functions
+- You will occasionally encounter a case where you need to iterate over items in a data frame, but none of the above functions are flexible enough to do what you want. In that case, you may consider using [a for loop](https://r4ds.had.co.nz/iteration.html#iteration).
