--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -590,14 +590,5 @@ image_read("img/version_control/issue_06.png") %>%
 
 ## Additional resources
 
-Now that you've picked up the basics of version control with Git and GitHub, you can expand your knowledge using 
-one of the many tutorials available online:
-
-### Best practices and workflows
-- [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best]  by Greg Wilson, Jennifer Bryan, Karen Cranston, Justin Kitzes, Lex Nederbragt & Tracy K. Teal
-- [Configuration Management for Large-Scale Scientific Computing at the UK Met Office](https://ieeexplore.ieee.org/iel5/5992/4653193/04653206.pdf?casa_token=6gY_5D7UbE4AAAAA:Z7BBJHplUfZEq31EfOpF_iP1qUQJwn170LdU8-ZUTtCu1N-ZpXYMV6yZHqIcSuRHLNVSkjM) [-@matthews2008configuration] by David Mathews, Greg Wilson & Steve Easterbrook
-
-### Technical references
-- GitHub's [guides website](https://guides.github.com/)
-- GitHub's [YouTube channel](https://www.youtube.com/githubguides)
-- BitBucket's [tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
+- This chapter focuses primarily on version control, but that is just one aspect of effective collaboration. If you want a more general guide for strategies on how to collaborate on a scientific project, read [good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best], which covers data management, project organization, collaborative writing, and more. 
+- After reading this chapter, you should have *just enough* knowledge of version control that you will find it to be a valuable tool in your projects. But we have just barely scratched the surface of what is possible with these tools. You can continue learning about version control using [GitHub's guides website](https://guides.github.com/), [GitHub's YouTube channel](https://www.youtube.com/githubguides), and [BitBucket's tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
