fixed some refs on collaboration

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -591,4 +591,4 @@ image_read("img/version_control/issue_06.png") %>%
 ## Additional resources
 
 - This chapter focuses primarily on version control, but that is just one aspect of effective collaboration. If you want a more general guide for strategies on how to collaborate on a scientific project, read [good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best], which covers data management, project organization, collaborative writing, and more. 
-- After reading this chapter, you should have *just enough* knowledge of version control that you will find it to be a valuable tool in your projects. But we have just barely scratched the surface of what is possible with these tools. You can continue learning about version control using [GitHub's guides website](https://guides.github.com/), [GitHub's YouTube channel](https://www.youtube.com/githubguides), and [BitBucket's tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
+- After reading this chapter, you should have *just enough* knowledge of version control that you will find it to be a valuable tool in your projects. But we have just barely scratched the surface of what is possible with these tools. You can continue learning about version control using [GitHub's guides website](https://guides.github.com/), [GitHub's YouTube channel](https://www.youtube.com/githubguides), and [BitBucket's tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control).
