--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,11 @@
 @article{wilson2014best,
-  title={Best practices for scientific computing},
-  author={Wilson, Greg and Aruliah, Dhavide A and Brown, C Titus and Hong, Neil P Chue and Davis, Matt and Guy, Richard T and Haddock, Steven HD and Huff, Kathryn D and Mitchell, Ian M and Plumbley, Mark D and others},
-  journal={PLoS Biol},
-  volume={12},
-  number={1},
-  pages={e1001745},
-  year={2014},
-  publisher={Public Library of Science}
+  title={Good enough practices in scientific computing},
+  author={Wilson, Greg and Bryan, Jennifer and Cranston, Karen and Kitzes, Justin and Nederbragt, Lex and Teal, Tracy}
+  journal={PLoS Computational Biology},
+  volume={13},
+  number={6},
+  pages={e1005510},
+  year={2017}
 }
 
 @misc{cancensus2016,
