minor bugfix in refs

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 @article{wilson2014best,
   title={Good enough practices in scientific computing},
-  author={Wilson, Greg and Bryan, Jennifer and Cranston, Karen and Kitzes, Justin and Nederbragt, Lex and Teal, Tracy}
+  author={Wilson, Greg and Bryan, Jennifer and Cranston, Karen and Kitzes, Justin and Nederbragt, Lex and Teal, Tracy},
   journal={PLoS Computational Biology},
   volume={13},
   number={6},
