--- a/index.Rmd
+++ b/index.Rmd
@@ -44,10 +44,10 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 
 This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help getting started using R on their computer, we recommend starting with the [Moving to your own machine] chapter. Figure \@ref(fig:img-chapter-overview) provides an overview of what you will learn in each chapter of this book.
 
+
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="850", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
-
 
 Four common data science problems that are useful for answering predictive and inferential data analysis questions covered in this book are:
 
@@ -55,6 +55,7 @@ Four common data science problems that are useful for answering predictive and i
 2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20-year-old females with a BMI of 25).
 3. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
 4. Estimating an average or a proportion from a representative sample (group of people or units) and using that estimate to generalize to the broader population  (e.g., the proportion of undergraduate students that own an iPhone)
+
 
 We map each of these problems to the type of data analysis question and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
@@ -106,8 +107,8 @@ If we were to open this data in a plain text editor, we would see each row on it
 head -n 10 data/can_lang.csv
 ```
 
-To load this data into R, and then to do anything else with it afterwards, we will need to use something called a *function.* 
-A function is a special word in R that takes in instructions (we call these *arguments*) and does something. The function we will 
+To load this data into R and then do anything else with it afterwards, we will need to use a *function.* 
+A function is a special word in R that takes instructions (we call these *arguments*) and does something. The function we will 
 use to read a `.csv` file into R is called `read_csv`.
 
 In its most basic use-case, `read_csv` expects that the data file:
@@ -118,34 +119,25 @@ In its most basic use-case, `read_csv` expects that the data file:
 
 
 Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, 
-to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *package*. The `read_csv` function in particular is in the `tidyverse` package (more on this later), which we load using the `library` function.
+to be able to use it, we have to load it from somewhere else: a collection of useful functions known as a *package*. The `read_csv` function, in particular, is in the `tidyverse` package (more on this later), which we load using the `library` function.
 
-Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around filenames and other letters and words that we 
-use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file, because our file satifies everthing else 
-the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about how to deal with more complicated files where the default arguments are not 
-appropriate. For example, files that use spaces or tabs to separate the columns, or with no column names.
+Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around filenames and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
 
 ```{r load_state_property_data, warning=FALSE, message=FALSE}
 library(tidyverse)
 read_csv("data/can_lang.csv")
 ```
-Above you can also see something neat that Jupyter does to help us understand our code: it colours text depending on its meaning in R. For example, 
-you'll note that functions get bold green text, while letters and words surrounded by quotations like filenames get blue text.
+
 
 > **In case you want to know more (optional):** 
-> We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster and it creates a nicer variant of the base R data frame called a *tibble*. 
+> We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster, and it creates a nicer variant of the base R data frame called a *tibble*. 
 > This has several benefits that we'll discuss in further detail later in the course.
 
 ## Assigning value to a data frame
 
-When we loaded the language data collected in the 2016 Canadian census in R above using `read_csv`, we did not give this data frame a name, so it was 
-just printed to the screen and we cannot do anything else with it. That isn't very useful; what we would like to do is give a name to the data frame that `read_csv` outputs
-so that we can use it later for analysis and visualization. 
+When we loaded the language data collected in the 2016 Canadian census in R above using `read_csv`, we did not give this data frame a name. Therefore the data was just printed on the screen, and we cannot do anything else with it. That isn't very useful; we would like to give a name to the data frame that `read_csv` outputs to use later for analysis and visualization. 
 
-To assign name to something in R, there are two possible ways---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, 
-the assignment symbol is preferred and is what we will use in this course. When we name something in R using the assignment symbol, `<-`, we do not need to surround 
-it with quotes like the filename. This is because we are formally telling R about this word and giving it a value. Only characters and words that act as values need 
-to be surrounded by quotes.
+There are two possible ways to assign a name to something in R ---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, the assignment symbol is preferred and is what we will use in this course. When we name something in R utilizing the assignment symbol, `<-`, we do not need to surround it with quotes like the filename because we are formally telling R about this word and giving it a value. Only characters and words that act as values need to be surrounded by quotes.
 
 Let's now use the assignment symbol to give the name `can_lang` to the language data collected in the 2016 Canadian census data frame that we get from `read_csv`.
 
@@ -154,7 +146,7 @@ can_lang <- read_csv("data/can_lang.csv")
 ```
 
 Wait a minute! Nothing happened this time! Or at least it looks like that. But actually, something did happen: the data was read in and now has the name `can_lang` associated with it. 
-And we can use that name to access the data frame and do things with it. First we will type the name of the data frame to print it to the screen.
+And we can use that name to access the data frame and do things with it. First, we will type the name of the data frame to print it to the screen.
 
 
 ```{r print}
