--- a/references.bib
+++ b/references.bib
@@ -75,7 +75,7 @@
 @book{james2013introduction,
   title={An introduction to statistical learning},
   author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
-  edition={$1^\text{st}$},
+  edition={$1^\text{st}$ ed},
   year={2013},
   publisher={Springer}
 }
